--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -6916,7 +6916,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #1abc9c !important;
+  background-color: #000080 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
